--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -1,7 +1,12 @@
-<mvc:View controllerName="com.amadeus.fiori.ppm.ipf.deiverables.masscreation.controller.App"
-    xmlns:html="http://www.w3.org/1999/xhtml"
-    xmlns:mvc="sap.ui.core.mvc" displayBlock="true"
-    xmlns="sap.m">
-    <App id="app">
-    </App>
+<mvc:View controllerName="com.amadeus.fiori.ppm.ipf.deiverables.masscreation.controller.App" xmlns:mvc="sap.ui.core.mvc" displayBlock="true"
+	xmlns="sap.m">
+	<Shell id="shell">
+		<App id="app">
+			<pages>
+				<Page id="page" title="{i18n>title}">
+					<content></content>
+				</Page>
+			</pages>
+		</App>
+	</Shell>
 </mvc:View>
